--- a/sport-project.css
+++ b/sport-project.css
@@ -1,72 +1,227 @@
-#nav{
-    outline: 1px solid black;
+/* body{
+ padding: .5rem .5rem;
+ margin:0 0; 
+
+    font-family: 'Montserrat', sans-serif;
+}
+
+nav{
+    top: 0;
+    margin-top: 0;
     padding: 0;
     display: flex;
     justify-content: space-between;
-    background-color: white;
     position: fixed;
     width: 100%;
+    align-items: center;
+    z-index: 1;
 }
-#nav .menu {
+nav .menu {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     padding: 0 0;
     display: flex;
     list-style: none;    
+    background-color:  #29a004;
+    flex-wrap: wrap;
 }
-
-
-#nav .menu  li {
+nav .menu  li {
+    position: relative;
     display: flex;
     justify-content: center;
-    height: 3rem;
     margin: 0 0;
-    outline: 1px solid black;
+    background-color:  #29a004;
     text-align: center;
-    line-height: 3rem;
-    background-color: white;
+    margin-right: 0.2rem;
 }
-#nav .menu  li a{
-    padding: 0 3rem;
-    color: black;
-    justify-self: stretch;
+nav .menu  li a{
+    width: 100%;
+    padding: 1rem 2rem 0;
+    color: white;
+    font-size: 1.5rem;
     text-decoration: none;
+    line-height: 3rem;
 }
-#nav .menu  li a:hover{
-    background-color: #f6f5f4;
-
+nav .menu  li a::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-bottom:2px solid  rgba(255, 255, 255, 1);
+    width: 0;
+    transform-origin: left;
+    transition:  .5s ease-in-out;
+    -webkit-transition: .5s ease-in-out;
+    z-index: 2;
 }
-#nav .menu  .matches {
+nav .menu  li a:hover::before{   
+    width: 100%;
+    transform: scale(1);
+    transition:  .5s ease-in-out;
+}
+nav .menu  li a:hover{
+    color:yellow;  
+}
+nav .menu  .matches {
     position: relative;
     top: 0;
     left: 0;
 }
-#nav .menu .matches #matches-list {
+nav .menu .matches #matches-list {
     padding-top:1rem ;    
-    display: none;
-    transition: 1s all ease;
+    opacity: 0;
+    transition: 0.3s all ease;
+    -webkit-transition: 0.3s all ease;
+    flex-direction: column;
+    list-style: none;
+    text-decoration: none;
+    position: absolute;
+    top:3rem;
+    left: -1.4rem;
+    width: 0;;
+    transition: 0.3s;
+    -webkit-transition: 0.3s all ease;
 }
-#nav .menu .matches:hover #matches-list {
+nav .menu .matches:hover #matches-list {
+    width: 100%;
+    opacity: 1;
     display: flex;
-    transition: 1s all ease;
+    transition: 0.3s;
+    -webkit-transition: 0.3s all ease;
+
+}
+nav #logotext{
+    font-family: 'Dancing Script', cursive;
+    font-size: 3rem;
+    color: white;
+    padding: 1rem 3rem 0 ;
+    text-decoration: none;
+    animation: 3s 1 normal logotext;
+    margin-left: 15vw;
+}
+*/
+.navbar-brand{
+    font-family: 'Dancing Script', cursive;
+    font-size: 3rem;
+}
+.navbar-nav li{
+    position: relative;
 }
 
-#nav .menu .matches #matches-list {
-flex-direction: column;
-list-style: none;
-text-decoration: none;
-position: absolute;
-top:3rem;
-left: -2rem;
+.uunderscore::before{
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    content: '';
+    width: 0;
 }
-/* main  */
+.uunderscore:hover::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    transition: .5s;
+    border-bottom:1px solid  white;
+    
+}
+.show + .navbar-brand{
+    display: none;
+}
+/* main */
+main {
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 7rem 0 0;
+}
 main #main-image{
     background-image: url('http://svitolina.com/uf/news/565/dqmlpyu0aabpsb.jpglarge.jpeg');
-    height: 100vh;
+    height: 50vh;
+    background-position-x: -5rem;
 }
 
-/* footer styles  */
+main #main-image p{
+    color: white;
+    padding: 1rem 3rem;
+    font-size: 3rem;
+}
+.card{
+    margin: 1rem 0;
+
+}
+/* #bio-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem 0;
+    padding: 0 0;
+}
+#bio-container .bio-content{
+    display: flex;
+    flex-direction: row;
+}
+#bio-container .bio-content p{
+    line-height: 2rem;
+    font-size: 1.2rem;
+    padding: 1rem;
+    flex:1 1 50%;
+}
+#bio-container .bio-content img{
+    width: auto;
+    height: 80vh;
+} */
+ /* footer styles   */
+footer{
+    margin-top: 5rem;
+}
 footer .social-buttons{
-    background-color: black;
+    background-color:#343a40;
     display: flex;
     justify-content: center;
     padding: 1rem;
 }
+footer .social-buttons a{
+    margin-right:1rem;
+}
+@keyframes logotext{
+    0%{
+        opacity: 0;
+    transform: scale(0);
+    }    
+    100%{
+        opacity: 1;
+     transform: scale(1);
+    }
+}
+@media screen and (max-width: 920px) {
+ 
+.navbar-brand{
+    position: absolute;
+    top: -1rem;
+    right: 0;
+    z-index: 1;
+    display: block;
+}
+.container section {
+    flex-direction: column;
+}
+.card img{
+    height: auto;
+    width: 100%;
+}
+main #main-image {
+background-position-x: -43rem;
+}
+main #main-image p{
+    padding: 1rem 4rem 1rem .5rem;
+    font-size: 2rem;
+    line-height: 3rem;
+    transition:all 1s;
+}
+} 
