--- a/sport-project.css
+++ b/sport-project.css
@@ -1,4 +1,4 @@
-/* body{
+ body{
  padding: .5rem .5rem;
  margin:0 0; 
 
@@ -104,7 +104,7 @@ nav #logotext{
     animation: 3s 1 normal logotext;
     margin-left: 15vw;
 }
-*/
+
 .navbar-brand{
     font-family: 'Dancing Script', cursive;
     font-size: 3rem;
@@ -155,7 +155,7 @@ main #main-image p{
     margin: 1rem 0;
 
 }
-/* #bio-container{
+ #bio-container{
     display: flex;
     flex-direction: column;
     align-items: center;
