--- a/sport-project.css
+++ b/sport-project.css
@@ -1,8 +1,7 @@
  body{
  padding: .5rem .5rem;
  margin:0 0; 
-
-    font-family: 'Montserrat', sans-serif;
+ font-family: 'Montserrat', sans-serif;
 }
 
 nav{
@@ -12,12 +11,14 @@ nav{
     display: flex;
     justify-content: space-between;
     position: fixed;
-    width: 100%;
     align-items: center;
     z-index: 1;
+    width: 100%;
 }
 nav .menu {
+    border: 1px solid red;
     position: relative;
+    width: 100%;
     top: 0;
     left: 0;
     right: 0;
@@ -25,22 +26,21 @@ nav .menu {
     padding: 0 0;
     display: flex;
     list-style: none;    
-    background-color:  #29a004;
     flex-wrap: wrap;
 }
 nav .menu  li {
+    border: 1px solid red;
     position: relative;
     display: flex;
     justify-content: center;
     margin: 0 0;
-    background-color:  #29a004;
     text-align: center;
     margin-right: 0.2rem;
 }
 nav .menu  li a{
     width: 100%;
     padding: 1rem 2rem 0;
-    color: white;
+    color: black;
     font-size: 1.5rem;
     text-decoration: none;
     line-height: 3rem;
@@ -67,42 +67,36 @@ nav .menu  li a:hover::before{
 nav .menu  li a:hover{
     color:yellow;  
 }
-nav .menu  .matches {
-    position: relative;
-    top: 0;
-    left: 0;
-}
-nav .menu .matches #matches-list {
-    padding-top:1rem ;    
-    opacity: 0;
-    transition: 0.3s all ease;
-    -webkit-transition: 0.3s all ease;
-    flex-direction: column;
-    list-style: none;
-    text-decoration: none;
+
+#matches-list {
+    display: none;
     position: absolute;
-    top:3rem;
-    left: -1.4rem;
-    width: 0;;
-    transition: 0.3s;
-    -webkit-transition: 0.3s all ease;
+    top: 5rem;
+    padding: 0;
+    width: 0%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 nav .menu .matches:hover #matches-list {
     width: 100%;
-    opacity: 1;
-    display: flex;
     transition: 0.3s;
     -webkit-transition: 0.3s all ease;
-
+    background-color: rgb(243, 41, 41);
 }
-nav #logotext{
+
+nav .menu .matches:hover #matches-list li a  {
+background-color: black;
+color: white;
+}
+nav .menu li:last-child a{
     font-family: 'Dancing Script', cursive;
     font-size: 3rem;
-    color: white;
+    line-height: 2rem;
     padding: 1rem 3rem 0 ;
     text-decoration: none;
     animation: 3s 1 normal logotext;
-    margin-left: 15vw;
+    margin-left: 10vw;
 }
 
 .navbar-brand{
