--- a/sport-project.css
+++ b/sport-project.css
@@ -16,7 +16,6 @@ nav{
     width: 100%;
 }
 nav .menu {
-    border: 1px solid red;
     position: relative;
     width: 100%;
     top: 0;
@@ -29,7 +28,6 @@ nav .menu {
     flex-wrap: wrap;
 }
 nav .menu  li {
-    border: 1px solid red;
     position: relative;
     display: flex;
     justify-content: center;
@@ -39,7 +37,7 @@ nav .menu  li {
 }
 nav .menu  li a{
     width: 100%;
-    padding: 1rem 2rem 0;
+    padding: 1rem 2rem;
     color: black;
     font-size: 1.5rem;
     text-decoration: none;
@@ -65,7 +63,7 @@ nav .menu  li a:hover::before{
     transition:  .5s ease-in-out;
 }
 nav .menu  li a:hover{
-    color:yellow;  
+    color:rgb(182, 19, 19);  
 }
 
 #matches-list {
@@ -89,7 +87,7 @@ nav .menu .matches:hover #matches-list li a  {
 background-color: black;
 color: white;
 }
-nav .menu li:last-child a{
+nav .menu > li:last-child a{
     font-family: 'Dancing Script', cursive;
     font-size: 3rem;
     line-height: 2rem;
