--- a/sport-project.css
+++ b/sport-project.css
@@ -1,219 +1,331 @@
- body{
- padding: .5rem .5rem;
- margin:0 0; 
- font-family: 'Montserrat', sans-serif;
-}
+ body {
+     padding: .5rem .5rem;
+     margin: 0 0;
+     font-family: 'Montserrat', sans-serif;
+ }
 
-nav{
-    top: 0;
-    margin-top: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    align-items: center;
-    z-index: 1;
-    width: 100%;
-}
-nav .menu {
-    position: relative;
-    width: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 0 0;
-    display: flex;
-    list-style: none;    
-    flex-wrap: wrap;
-}
-nav .menu  li {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    margin: 0 0;
-    text-align: center;
-    margin-right: 0.2rem;
-}
-nav .menu  li a{
-    width: 100%;
-    padding: 1rem 2rem;
-    color: black;
-    font-size: 1.5rem;
-    text-decoration: none;
-    line-height: 3rem;
-}
-nav .menu  li a::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border-bottom:2px solid  rgba(255, 255, 255, 1);
-    width: 0;
-    transform-origin: left;
-    transition:  .5s ease-in-out;
-    -webkit-transition: .5s ease-in-out;
-    z-index: 2;
-}
-nav .menu  li a:hover::before{   
-    width: 100%;
-    transform: scale(1);
-    transition:  .5s ease-in-out;
-}
-nav .menu  li a:hover{
-    color:rgb(182, 19, 19);  
-}
+ nav {
+     position: relative;
+     top: 0;
+     left: 0;
+     margin-top: 0;
+     padding: 0;
+     display: flex;
+     justify-content: space-between;
+     position: fixed;
+     align-items: center;
+     z-index: 1;
+     width: 100%;
+ }
 
-#matches-list {
-    display: none;
-    position: absolute;
-    top: 5rem;
-    padding: 0;
-    width: 0%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
-nav .menu .matches:hover #matches-list {
-    width: 100%;
-    transition: 0.3s;
-    -webkit-transition: 0.3s all ease;
-    background-color: rgb(243, 41, 41);
-}
+ nav .menu {
+     position: relative;
+     width: 100%;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     padding: 0 0;
+     display: flex;
+     list-style: none;
+     flex-wrap: wrap;
+     background-color: white;
+ }
 
-nav .menu .matches:hover #matches-list li a  {
-background-color: black;
-color: white;
-}
-nav .menu > li:last-child a{
-    font-family: 'Dancing Script', cursive;
-    font-size: 3rem;
-    line-height: 2rem;
-    padding: 1rem 3rem 0 ;
-    text-decoration: none;
-    animation: 3s 1 normal logotext;
-    margin-left: 10vw;
-}
+ nav .menu li {
+     position: relative;
+     display: flex;
+     justify-content: center;
+     margin: 0 0;
+     text-align: center;
+     margin-right: 0.2rem;
+ }
 
-.navbar-brand{
-    font-family: 'Dancing Script', cursive;
-    font-size: 3rem;
-}
-.navbar-nav li{
-    position: relative;
-}
+ nav .menu li a {
+     width: 100%;
+     padding: 1rem 2rem;
+     color: black;
+     font-size: 1.5rem;
+     text-decoration: none;
+     line-height: 3rem;
+ }
 
-.uunderscore::before{
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: absolute;
-    content: '';
-    width: 0;
-}
-.uunderscore:hover::before{
-    position: absolute;
-    content: '';
-    width: 100%;
-    transition: .5s;
-    border-bottom:1px solid  white;
-    
-}
-.show + .navbar-brand{
-    display: none;
-}
-/* main */
-main {
-    position: relative;
-    top: 0;
-    left: 0;
-    padding: 7rem 0 0;
-}
-main #main-image{
-    background-image: url('http://svitolina.com/uf/news/565/dqmlpyu0aabpsb.jpglarge.jpeg');
-    height: 50vh;
-    background-position-x: -5rem;
-}
+ nav .menu li a::before {
+     content: '';
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     border-bottom: 2px solid rgba(255, 255, 255, 1);
+     width: 0;
+     transform-origin: left;
+     transition: .5s ease-in-out;
+     -webkit-transition: .5s ease-in-out;
+     z-index: 2;
+ }
 
-main #main-image p{
-    color: white;
-    padding: 1rem 3rem;
-    font-size: 3rem;
-}
-.card{
-    margin: 1rem 0;
-
-}
- #bio-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem 0;
-    padding: 0 0;
-}
-#bio-container .bio-content{
-    display: flex;
-    flex-direction: row;
-}
-#bio-container .bio-content p{
-    line-height: 2rem;
-    font-size: 1.2rem;
-    padding: 1rem;
-    flex:1 1 50%;
-}
-#bio-container .bio-content img{
-    width: auto;
-    height: 80vh;
-} */
- /* footer styles   */
-footer{
-    margin-top: 5rem;
-}
-footer .social-buttons{
-    background-color:#343a40;
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
-}
-footer .social-buttons a{
-    margin-right:1rem;
-}
-@keyframes logotext{
-    0%{
-        opacity: 0;
-    transform: scale(0);
-    }    
-    100%{
-        opacity: 1;
+ nav .menu li a:hover::before {
+     width: 100%;
      transform: scale(1);
-    }
-}
-@media screen and (max-width: 920px) {
- 
-.navbar-brand{
-    position: absolute;
-    top: -1rem;
-    right: 0;
-    z-index: 1;
-    display: block;
-}
-.container section {
-    flex-direction: column;
-}
-.card img{
-    height: auto;
-    width: 100%;
-}
-main #main-image {
-background-position-x: -43rem;
-}
-main #main-image p{
-    padding: 1rem 4rem 1rem .5rem;
-    font-size: 2rem;
-    line-height: 3rem;
-    transition:all 1s;
-}
-} 
+     transition: .5s ease-in-out;
+ }
+
+ nav .menu li a:hover {
+     color: rgb(182, 19, 19);
+ }
+
+ #matches-list {
+     display: none;
+     position: absolute;
+     top: 5rem;
+     width: 0%;
+     display: flex;
+     flex-direction: column;
+     overflow: hidden;
+     align-items: stretch;
+ }
+
+ nav .menu .matches:hover #matches-list {
+     padding: 0 0;
+     width: 100%;
+     transition: 0.3s;
+     -webkit-transition: 0.3s all ease;
+     background-color: rgb(243, 41, 41);
+ }
+
+ nav .menu .matches:hover #matches-list li a {
+     background-color: black;
+     color: white;
+ }
+
+ nav .menu>li:last-child a {
+     font-family: 'Dancing Script', cursive;
+     font-size: 3rem;
+     line-height: 2rem;
+     padding: 1rem 3rem 0;
+     text-decoration: none;
+     animation: 3s 1 normal logotext;
+     margin-left: 10vw;
+ }
+
+ nav .toggler {
+     display: none;
+     position: absolute;
+     cursor: pointer;
+     top: 1rem;
+     left: 0;
+     padding: 1rem;
+ }
+
+ nav .toggler span, nav .toggler span::before, nav .toggler span::after {
+     width: 2rem;
+     position: absolute;
+     top: 1rem;
+     left: 0;
+     height: 3px;
+     background-color: black;
+ }
+
+ nav .toggler span::before, nav .toggler span::after {
+     content: '';
+     top: -.5rem;
+     left: 0;
+ }
+
+ nav .toggler span::after {
+     top: .5rem;
+ }
+
+ #checkbox {
+     display: none;
+ }
+
+ /* bootrap styles */
+
+ .navbar-brand {
+     font-family: 'Dancing Script', cursive;
+     font-size: 3rem;
+ }
+
+ .navbar-nav li {
+     position: relative;
+ }
+
+ .uunderscore::before {
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     position: absolute;
+     content: '';
+     width: 0;
+ }
+
+ .uunderscore:hover::before {
+     position: absolute;
+     content: '';
+     width: 100%;
+     transition: .5s;
+     border-bottom: 1px solid white;
+ }
+
+ .show+.navbar-brand {
+     display: none;
+ }
+
+ /* main */
+
+ main {
+     position: relative;
+     top: 0;
+     left: 0;
+     padding: 7rem 0 0;
+ }
+
+ main #main-image {
+     background-image: url('http://svitolina.com/uf/news/565/dqmlpyu0aabpsb.jpglarge.jpeg');
+     height: 50vh;
+     background-position-x: -5rem;
+ }
+
+ main #main-image p {
+     color: white;
+     padding: 1rem 3rem;
+     font-size: 3rem;
+ }
+
+ .card {
+     margin: 1rem 0;
+ }
+
+ #bio-container {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     margin: 1rem 0;
+     padding: 0 0;
+ }
+
+ #bio-container .bio-content {
+     display: flex;
+     flex-direction: row;
+ }
+
+ #bio-container .bio-content p {
+     line-height: 2rem;
+     font-size: 1.2rem;
+     padding: 1rem;
+     flex: 1 1 50%;
+ }
+
+ #bio-container .bio-content img {
+     width: auto;
+     height: 80vh;
+ }
+
+ */
+ /* footer styles   */
+
+ footer {
+     margin-top: 5rem;
+ }
+
+ footer .social-buttons {
+     background-color: #343a40;
+     display: flex;
+     justify-content: center;
+     padding: 1rem;
+ }
+
+ footer .social-buttons a {
+     margin-right: 1rem;
+ }
+
+ @keyframes logotext {
+     0% {
+         opacity: 0;
+         transform: scale(0);
+     }
+     100% {
+         opacity: 1;
+         transform: scale(1);
+     }
+ }
+
+ @media screen and (max-width: 920px) {
+     main {
+         margin: 0 0 1rem;
+     }
+     nav {
+         position: relative;
+     }
+     #nav .menu {
+         display: none;
+     }
+     .navbar-brand {
+         position: absolute;
+         top: -1rem;
+         right: 0;
+         z-index: 1;
+         display: block;
+     }
+     .container section {
+         flex-direction: column;
+     }
+     #bio-container .bio-content {
+         flex-direction: column;
+     }
+     #bio-container .bio-content img {
+         height: 100%;
+         width: auto;
+     }
+     main #main-image {
+         background-position-x: -43rem;
+     }
+     main #main-image p {
+         padding: 1rem 4rem 1rem .5rem;
+         font-size: 2rem;
+         line-height: 3rem;
+         transition: all 1s;
+     }
+     label{
+         width: 100%;
+     }
+     label .toggler {
+         display: block;
+     }
+     #nav #checkbox:checked+label .menu {
+         display: block;
+         top: 4rem;
+         left: 15vw;
+         background-color: white;
+     }
+     .matches {
+         display: flex;
+         flex-direction: column;
+         align-items: stretch;
+     }
+     .matches:hover #matches-list {
+         position: static;
+         height: 100%;
+     }
+     .matches #matches-list {
+         height: 0;
+     }
+     #matches-list {
+         display: block;
+         top: 0;
+         height: 0;
+         flex-direction: column;
+         position: static;
+     }
+     #matches-list {
+         display: flex;
+         top: 0;
+         left: 0;
+         height: 100%;
+         flex-direction: column;
+         position: static;
+     }
+ }
