--- a/sport-project2.css
+++ b/sport-project2.css
@@ -1,45 +1,74 @@
+body {
+    font-family: 'Raleway';
+}
+
 header {
     position: fixed;
-    background: red;
+    background: white;
     color: #fff;
-    width: 100%
+    width: 100%;
+    top: 0;
 }
 
 header nav ul {
+    background: red;
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
     list-style-type: none;
+    width: 100%;
 }
 
 header nav li {
-    display: inline-block;
-    padding: 1rem;
+    display: flex;
+}
+
+.menu li:last-child {
+    margin-left: 20rem;
+}
+
+header nav li #logotext p {
+    font-size: 5rem;
+    font-family: 'Dancing Script', cursive;
 }
 
 header nav li a {
+    padding: 1rem 2rem;
+    text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
+    outline: 1px solid black;
+}
+
+header nav li a:hover {
+    color: black;
 }
 
 header nav li ul {
     display: none;
 }
 
+header nav label {
+    margin: 1rem 0 0;
+    position: relative;
+    width: 100%;
+}
+
 .matches:hover ul {
     display: block;
 }
 
-.matches:hover #matches-list{
+.matches:hover #matches-list {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     background: blue;
-    padding: 0;
+    padding: 0 0;
     text-align: center;
     position: absolute;
     width: 10rem;
+    margin-top: 4rem;
 }
 
 .toggler {
@@ -50,50 +79,143 @@ header nav [type="checkbox"] {
     display: none;
 }
 
+main {
+    margin-bottom: 2rem;
+}
+
+main #main-image {
+    margin-top: 7rem;
+    color: white;
+    height: 50vh;
+    background-image: url('http://svitolina.com/uf/news/565/dqmlpyu0aabpsb.jpglarge.jpeg')
+}
+
+main #main-image p {
+    font-size: 3rem;
+    padding: 1rem;
+}
+
+main section {
+    text-align: center;
+    display: flex;
+    justify-content: column;
+    align-items: center;
+}
+
+main section div div {
+    display: flex;
+    justify-content: column;
+}
+
+main section div div p {
+    padding: 1rem 1rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+main section div div img {
+    width: 40%;
+}
+
+footer {
+    padding: 1rem;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+}
+
+footer a {
+    margin-right: 1rem;
+}
+
 @media screen and (max-width: 600px) {
-    .toggler {
-        display: block;
+    header nav {
+        position: relative;
+        margin-top: 1rem;
     }
-
-    .toggler:before {
-        display: block;
-        content: "*";
+    header label {
+        position: static;
     }
-
+    label .toggler {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        display: block;
+        padding: 1.2rem;
+        z-index: 1;
+    }
+    .menu li:last-child {
+        margin-left: 0;
+    }
+    .toggler span, .toggler span::before, .toggler span::after {
+        position: absolute;
+        top: 0.5rem;
+        left: 0;
+        width: 2rem;
+        height: 3px;
+        background-color: black;
+    }
+    .toggler span::before, .toggler span::after {
+        position: absolute;
+        content: '';
+    }
+    .toggler span::after {
+        top: -.5rem;
+    }
     header nav ul {
         display: none;
     }
-
     header nav ul {
         flex-direction: column;
         align-items: stretch;
         text-align: center;
     }
-
     header nav li {
         outline: 1px dotted green;
     }
-
-    
-    .matches:hover #matches-list{
+    .matches:hover {
+        flex-direction: column;
+    }
+    .matches:hover #matches-list {
+        padding:1rem;
         position: static;
         width: 100%;
+        margin-top:0;
+       
     }
-
-    header nav [type="checkbox"]:checked + label {
+    header nav li a {
+        width: 100%;
+        display: block;
+    }
+    header nav .matches:hover a {
+    padding-left:0;
+    }
+    header nav [type="checkbox"]:checked+label {
         width: 100%;
     }
-
-    header nav [type="checkbox"]:checked + label > ul {
+    header nav [type="checkbox"]:checked+label>ul {
         display: flex;
-        width:100%;
+        width: 100%;
         padding: 0;
+        position: r;
     }
-
-    header nav [type="checkbox"]:checked #matches-list
-    {
+    header nav [type="checkbox"]:checked #matches-list {
         width: 100%;
         align-items: stretch;
+        margin-top:0;
+        margin-left:0;
     }
-
+    section div {
+        flex-direction: column;
+    }
+    main section div div img {
+        width: 100%;
+    }
+    main #main-image {
+        background-position-x: -45rem;
+    }
+    main #main-image p {
+        font-size: 2rem;
+        padding: 1rem 7rem 0 1rem;
+    }
 }
