--- a/sport-project2.css
+++ b/sport-project2.css
@@ -24,7 +24,7 @@ header nav li {
     display: flex;
 }
 
-.menu li:last-child {
+.menu > li:last-child {
     margin-left: 20rem;
 }
 
@@ -38,7 +38,7 @@ header nav li a {
     text-decoration: none;
     color: #fff;
     font-size: 1.5rem;
-    outline: 1px solid black;
+    width:100%;
 }
 
 header nav li a:hover {
@@ -68,7 +68,7 @@ header nav label {
     text-align: center;
     position: absolute;
     width: 10rem;
-    margin-top: 4rem;
+    margin-top: 3.5rem;
 }
 
 .toggler {
