--- a/sport-project2.css
+++ b/sport-project2.css
@@ -24,14 +24,7 @@ header nav li {
     display: flex;
 }
 
-.menu > li:last-child {
-    margin-left: 20rem;
-}
 
-header nav li #logotext p {
-    font-size: 5rem;
-    font-family: 'Dancing Script', cursive;
-}
 
 header nav li a {
     padding: 1rem 2rem;
@@ -55,6 +48,13 @@ header nav label {
     width: 100%;
 }
 
+.menu > li:last-child {
+    margin-left: 20vw;
+}
+.menu > li:last-child a {
+    font-size: 3rem;
+    font-family: 'Dancing Script', cursive;
+}
 .matches:hover ul {
     display: block;
 }
